--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.13",
     "morgan": "^1.9.1",
+    "pusher": "^3.0.0",
     "swagger-ui-express": "^4.1.2",
     "uuidv4": "^6.0.0",
     "winston": "^3.2.1"
